fix: security update due to new changes on main branch