@@ -12,6 +12,8 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
+import org.springframework.security.access.prepost.PostAuthorize;
+import org.springframework.security.access.prepost.PostFilter;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -19,6 +21,7 @@ import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.LocalTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * Service class for managing absences.
@@ -107,7 +110,7 @@ public class AbsenceService {
         return absenceByDateRangeAndUserId.stream()
                 .filter(a -> a.getStatus().getId() == 2)
                 .map(AbsenceDto::fromEntity)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     /**
@@ -125,7 +128,7 @@ public class AbsenceService {
         return userAbsences.stream()
                 .filter(a -> a.getStatus().getId() == 2)
                 .map(AbsenceDto::fromEntity)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     /**
